--- a/action.yml
+++ b/action.yml
@@ -39,39 +39,20 @@ inputs:
     required: false
     default: github.com
 runs:
-  using: 'composite'
-  steps:
-    - name: Set GitHub Path
-      run: echo "$GITHUB_ACTION_PATH" >> $GITHUB_PATH
-      shell: bash
-      env:
-        GITHUB_ACTION_PATH: ${{ github.action_path }}
-
-    - name: Run entrypoint.sh
-      run: entrypoint.sh
-      shell: bash
-      env:
-        INPUT_SOURCE_FILE: ${{ inputs.source_file }}
-        INPUT_GIT_SERVER: ${{ inputs.git_server }}
-        INPUT_DESTINATION_BRANCH: ${{ inputs.destination_branch }}
-        INPUT_USER_EMAIL: ${{ inputs.user_email }}
-        INPUT_USER_NAME: ${{ inputs.user_name }}
-        INPUT_DESTINATION_REPO: ${{ inputs.destination_repo }}
-        INPUT_DESTINATION_FOLDER: ${{ inputs.destination_folder }}
-        INPUT_USE_RSYNC: ${{ inputs.use_rsync }}
-        INPUT_USER_ACTOR: ${{ inputs.user_actor }}
-        INPUT_COMMIT_MESSAGE: ${{ inputs.commit_message }}
-        INPUT_RENAME: ${{ inputs.rename }}
-
-    - name: Run SCANOSS Code Scan
-      id: scanoss-code-scan-step
-      uses: scanoss/gha-code-scan@v0.2.0
-      with:
-        api.key: ${{ secrets.OPENSOURCE }}
-        api.url: https://api.scanoss.com/scan/direct
-        dependencies.enabled: true
-        policies.halt_on_failure: false
-        policies: copyleft, undeclared
+  using: 'docker'
+  image: 'Dockerfile'
+  args:
+    - ${{ inputs.source-file }}
+    - ${{ inputs.destination-repo }}
+    - ${{ inputs.destination-folder }}
+    - ${{ inputs.user-email }}
+    - ${{ inputs.user-actor }}
+    - ${{ inputs.destination-branch }}
+    - ${{ inputs.destination-branch-create }}
+    - ${{ inputs.commit-message }}
+    - ${{ inputs.git-server }}
+    - ${{ inputs.rename }}
+    - ${{ inputs.use-rsync }}
 
 branding:
   icon: 'git-commit'
