--- a/action.yml
+++ b/action.yml
@@ -38,6 +38,10 @@ inputs:
     description: 'Git server host, default github.com'
     required: false
     default: github.com
+  destination_branch_exists:
+    description: 'Does the destination_branch already exist in the audi-red-documentation repo'
+    required: false
+    default: false
 runs:
   using: 'docker'
   image: 'Dockerfile'
@@ -53,6 +57,7 @@ runs:
     - ${{ inputs.git-server }}
     - ${{ inputs.rename }}
     - ${{ inputs.use-rsync }}
+    - ${{ inputs.destination_branch_exists }}
 branding:
   icon: 'git-commit'
   color: 'green'
